--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2B2C2F</color>
+    <color name="colorPrimary">#F92C2C</color>
     <color name="colorPrimaryDark">#1D1E20</color>
     <color name="colorAccent">#11C76F</color>
     <color name="colorPrimaryLight">#ACB1BD</color>
