--- a/app/src/main/res/layout/list_item_loading.xml
+++ b/app/src/main/res/layout/list_item_loading.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.progressindicator.LinearProgressIndicator xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/user_list_progress_bar"
-    android:layout_width="@dimen/width_140dp"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    >
+<com.google.android.material.progressindicator.CircularProgressIndicator
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:indeterminate="true"
+    android:layout_marginTop="@dimen/margin_12dp"
     app:indicatorColor="@android:color/white" />
+</FrameLayout>
