--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#F92C2C</color>
+    <color name="colorPrimary">#22c25f</color>
     <color name="colorPrimaryDark">#1D1E20</color>
     <color name="colorAccent">#11C76F</color>
-    <color name="colorPrimaryLight">#ACB1BD</color>
     <color name="colorDetail">#80FFFFFF</color>
 </resources>
