--- a/app/src/main/res/layout/list_item_user.xml
+++ b/app/src/main/res/layout/list_item_user.xml
@@ -10,11 +10,11 @@
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/cv_contact"
         style="@style/Widget.Material3.CardView.Outlined"
-        app:cardElevation="0dp"
-        app:strokeWidth="0dp"
         android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_4dp"
-        android:layout_height="wrap_content">
+        app:cardElevation="0dp"
+        app:strokeWidth="0dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -25,11 +25,11 @@
                 style="@style/Widget.Material3.CardView.Outlined"
                 android:layout_width="@dimen/width_52dp"
                 android:layout_height="@dimen/width_52dp"
-                app:civ_border_width="@dimen/width_2dp"
-                app:civ_border_color="@android:color/white"
                 android:layout_marginStart="@dimen/margin_24dp"
                 android:layout_marginTop="@dimen/margin_12dp"
                 android:layout_marginBottom="@dimen/margin_12dp"
+                app:civ_border_color="@android:color/white"
+                app:civ_border_width="@dimen/width_2dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
@@ -57,21 +57,6 @@
                 app:layout_constraintStart_toStartOf="@+id/username"
                 app:layout_constraintTop_toBottomOf="@+id/username"
                 tools:text="@string/name_surname" />
-
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="0dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="@dimen/margin_8dp"
-                android:layout_marginTop="@dimen/margin_8dp"
-                android:layout_marginEnd="@dimen/margin_8dp"
-                android:layout_marginBottom="@dimen/margin_8dp"
-                android:visibility="gone"
-                app:layout_constraintBottom_toBottomOf="@+id/picture"
-                app:layout_constraintEnd_toEndOf="@+id/picture"
-                app:layout_constraintStart_toStartOf="@+id/picture"
-                app:layout_constraintTop_toTopOf="@+id/picture" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </com.google.android.material.card.MaterialCardView>
